现在可监听文件变化, 制作qrcode

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "chokidar": "^3.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "miniprogram-ci": "^1.0.83",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "shelljs": "^0.8.4"
   }
 }
